[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
description = "A cross-platform detour library written in Rust"
documentation = "https://docs.rs/detour"
homepage = "https://github.com/darfink/detour-rs"
keywords = ["detour", "hook", "function", "api", "redirect"]
license = "BSD-2-Clause"
name = "detour"
readme = "README.md"
repository = "https://github.com/darfink/detour-rs"
version = "0.6.0"

[badges]

[badges.appveyor]
repository = "darfink/detour-rs"

[badges.travis-ci]
repository = "darfink/detour-rs"

[dependencies]
boolinator = "2.4.0"
cfg-if = "0.1.1"
generic-array = "0.12.0"
lazy_static = "1.2"
libc = "0.2.45"
mmap-fixed = "0.1"
region = "2.0.0"
slice-pool = "0.3.4"
tap = "0.3.0"

[dev-dependencies]
matches = "0.1.8"

[features]
default = ["nightly"]
nightly = []

[target]

[target."cfg(any(target_arch = \"x86\", target_arch = \"x86_64\"))"]

[target."cfg(any(target_arch = \"x86\", target_arch = \"x86_64\"))".dependencies]
libudis86-sys = "0.2.0"
