[package]
authors = ["Mason Ginter <mason@dagint.com>", "Elliott Linder <elliott.darfink@gmail.com>"]
description = "A cross-platform detour library written in Rust"
documentation = "https://docs.rs/retour"
homepage = "https://github.com/Hpmason/retour-rs"
keywords = ["detour", "hook", "function", "api", "redirect"]
license = "BSD-2-Clause"
name = "retour"
readme = "README.md"
repository = "https://github.com/Hpmason/retour-rs"
version = "0.1.0"
edition = "2018"

# [badges]
# azure-devops = { project = "darfink/detour-rs", pipeline = "darfink.detour-rs" }

[dependencies]
cfg-if = "1.0.0"
generic-array = "0.14.1"
lazy_static = "1.4"
libc = "0.2.45"
mmap = { package = "mmap-fixed-fixed", version = "0.1.0" }
region = "3.0.0"
slice-pool = "0.4.1"

[dev-dependencies]
matches = "0.1.10"

[features]
default = ["nightly"]
nightly = []

[[example]]
name = "messageboxw_detour"
crate-type = ["cdylib"]

[target."cfg(any(target_arch = \"x86\", target_arch = \"x86_64\"))".dependencies]
udis = { package = "libudis86-sys", version = "0.2.1" }

[target."cfg(windows)".dev-dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "windef", "winnt", "libloaderapi"] }
